# control_final

./: .gitmodules  CMakeLists.txt
config/: controller.yaml  env.yaml  observer.yaml  pid.yaml  render.yaml  sensor.yaml  sim.yaml
experiments/: inner_loop_search.yaml  pid_grid_search.yaml
include/control_final/: experiment.h  simulator.h
include/control_final/controller/: controller.h  pid_controller.h  reference.h  table_step.h
include/control_final/model/: environment.h  render_config.h  state.h
include/control_final/sensor/: sensor.h
scripts/: inner_loop.py  main.py  pid_stats.py  sensor_noise.py
scripts/logs/: controller_log.py  env_log.py  log.py  sensor_log.py
src/: experiment.cpp  main.cpp  simulator.cpp
src/controller/: controller.cpp  pid_controller.cpp  table_step.cpp
src/model/: environment.cpp  render_config.cpp  state.cpp
src/sensor/: sensor.cpp
